refactor: cleanup modular package;